tables overflow properly now
still a few pixels to the left overflow

--- a/src/components/DisplayEquationCustom.astro
+++ b/src/components/DisplayEquationCustom.astro
@@ -18,14 +18,14 @@ const { id="", title="", derivation="", background=""} = Astro.props;
 
 
 
-<div id={id} class={background ? 'background-yellow overflow-auto my-2' : 'mb-2'}>
+<div id={id} class={background ? 'background-yellow overflow-hidden my-2' : 'mb-2'}>
     { title &&
         <div class="mb-2 px-2">
             {title && title}{id && <small>{` #${id}`}</small>}
         </div>
     }
 
-    <div class="w-100  p-2">
+    <div class="w-100 p-2" style="overflow-y: hidden; overflow-x: auto;">
         <slot />
     </div>
 
