--- a/src/components/SubSubSection.astro
+++ b/src/components/SubSubSection.astro
@@ -3,7 +3,7 @@ const {title} = Astro.props;
 ---
 
 <div class="callout-grid mt-3">
-    <div class="w-100 px-0 pe-lg-2">
+    <div class="w-100 px-0 pe-2">
         <h3 class="fw-bold text-center" set:html={title}></h3>
 
         <slot />
