--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -570,7 +570,7 @@ import Col from "../../components/Col.astro"
     </div>
     </PrairieDrawCanvas>
 
-     <Example title="Derivating a vector function." >
+     <Example title="Differentiating a vector function." >
         <p>
           The vector <InlineEquation equation="\\vec{r}(t)" /> is given by
 
