--- a/src/pages/sol/stress.astro
+++ b/src/pages/sol/stress.astro
@@ -66,13 +66,8 @@ We consider a homogeneous distribution of the internal force <InlineEquation equ
 <SubSubSection title="Average Shear Stress">
 
 <CalloutContainer slot="cards">
-    <CalloutCard>
-        <p class="m-0"><u>Test content:</u></p>
-        <img src="https://picsum.photos/400" class="w-100 overflow-hidden">
-    </CalloutCard>
-
-    <CalloutCard>
-        <p class="m-0"><u>Test video:</u></p>
+    <CalloutCard title="Extra!">
+        <p class="m-0"><u>Supplemental video:</u></p>
         <iframe src="https://www.youtube.com/embed/aQf6Q8t1FQE?si=cSAplDLVMVYzCZRx" class="w-100" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </CalloutCard>
 </CalloutContainer>
