--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -42,8 +42,7 @@ The mutual forces of action and reaction between two particles are equal, opposi
 
 <SubSubSection title="Example">
 
-
-<Image src='/Statics/IntroductionFigures/NewtonsLaws.png' width='5'><BlueText>Taken from TAM212 Reference Pages (Kinetics of Point Masses - Newton's Equations)</BlueText></Image>
+<PrairieDrawCanvas id="rep-ff-c" width="600" height="600" />
 
 </SubSubSection>
 
