--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -64,13 +64,67 @@ In this course, we assume two things about particles:
 
 </SubSubSection>
 
-<SubSubSection title=">Rigid Bodies">
+<SubSubSection title="Rigid Bodies">
 
 For rigid bodies, we assume that the object has both mass (similar to particles) but also take its shape into account. 
 
 We call these bodies "rigid" because we assume that they do not deform under applied forces or moments. 
 
-<BlueText>Insert the same content here as from the TAM212 Reference Pages (Rigid Bodies - introductory section at the top of the page).</BlueText>
+A <em>rigid body</em> is an extended area of material that
+          includes all the points inside it, and which moves so that
+          the distances and angles between all its points remain
+          constant. The location of a rigid body can be described by
+          the position of one point $P$ inside it, together with the
+          rotation angle of the body (one angle in 2D, three angles in
+          3D).
+    <Center>
+        <table>
+            <tr>
+            <th></th>
+            <th>location description</th>
+            <th>velocity description</th>
+            </tr>
+            <tr>
+            <th>point mass</th>
+            <td>position vector <InlineEquation equation="\\vec{r}_P" /></td>
+            <td>velocity vector <InlineEquation equation="\\vec{v}_P" /></td>
+            </tr>
+            <tr>
+            <th>rigid body in 2D</th>
+            <td>
+                position vector <InlineEquation equation="\\vec{r}_P" />
+                <br />
+                angle $\theta$
+            </td>
+            <td>
+                velocity vector <InlineEquation equation="\\vec{v}_P"/>
+                <br />
+                angular velocity <InlineEquation equation="\\omega" />
+            </td>
+            </tr>
+            <tr>
+            <th>rigid body in 3D</th>
+            <td>
+                position vector <InlineEquation equation="\\vec{r}_P"/>
+                <br />
+                angles <InlineEquation equation="\\theta,\\phi,\\psi"/>
+            </td>
+            <td>
+                velocity vector <InlineEquation equation="\\vec{v}_P"/>
+                <br />
+                angular velocity vector <InlineEquation equation="\\vec{\\omega}" />
+            </td>
+            </tr>
+        </table>
+    </Center>
+
+    <p>
+        Neither point masses nor rigid bodies can physically exist,
+        as no body can really be a single point with no extent, and
+        no extended body can be exactly rigid. Despite this, these
+        are very useful models for mechanics and dynamics.
+      </p>
+
 </SubSubSection>
 
 </Layout>
