--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -7,15 +7,297 @@ import BlueText from "../../components/BlueText.astro"
 import InlineEquation from "../../components/InlineEquation.astro" 
 ---
 <Layout title="Cartesian Coordinates">
+
 <Section title="Cartesian Coordinates">
 
-<BlueText>Insert the same content here as from the TAM212 Reference Pages (Positions and Coordinates - Cartesian Coordinates)</BlueText>
+<SubSection title="Notation">
+
+    <p>
+        Some textbooks differentiate between <em>free
+        vectors</em>, which are free to slide around, and
+        <em>bound vectors</em>, which are anchored in space. We
+        will only use free vectors.
+      </p>
+
+      <p>
+        We will use the over-arrow notation <InlineEquation equation="\\vec{a}" /> for vector
+        quantities. Other common notations include bold
+        <InlineEquation equation="\\boldsymbol{a}" /> and under-bars <InlineEquation equation="\\underline{a}" />. For unit
+        (length one) vectors we will use an over-hat <InlineEquation equation="\\hat{a}" />.
+      </p>
+</SubSection>
+
+<SubSection title="Cartesian coordinate system">
+
+    <p>
+        Cartesian coordinates (also known as rectangular
+        coordinates) are the regular \(x,y\) or \(x,y,z\) coordinates in
+        2D and 3D, with perpendicular straight-line axes.
+      </p>
+      <Center>
+      <table id="rvp-tc" class="mb-3">
+        <tr class="border-below">
+          <th>coordinate</th>
+          <th>name</th>
+          <th>range</th>
+          <th>definition</th>
+        </tr>
+        <tr>
+          <td>\(x\)</td>
+          <td>horizontal</td>
+          <td>\(-\infty \lt x \lt \infty\)</td>
+          <td>horizontal distance from the \(y\)-axis</td>
+        </tr>
+        <tr>
+          <td>\(y\)</td>
+          <td>vertical</td>
+          <td>\(-\infty \lt y \lt \infty\)</td>
+          <td>vertical distance from the \(x\)-axis</td>
+        </tr>
+      </table>
+    </Center>
+      <p>
+        In 3D the \(x\),\(y\),\(z\) axes are oriented in <em>right-handed
+        order</em>, so that fingers curling from \(x\) to \(y\) means
+        the thumb points in the \(z\) direction.
+      </p>
+    <Center>
+        <PrairieDrawCanvas id="rvp-fc-c" width="450" height="450">
+            <p class="figureCaption">
+                Cartesian coordinate system, showing the origin \(O\) and
+                three positions with their coordinates.
+            </p>
+        </PrairieDrawCanvas>
+    </Center>
+
+    <CalloutContainer slot="cards">
+        <CalloutCard title="Notation note">
+            <p>
+                When writing coordinates we can either list the coordinate
+                values explicitly, like \(x = 2\), \(y = 1\), or we can just
+                write the numbers in an ordered list, like \( (2,
+                1) \).
+              </p>
+              <p>
+                Writing them as a list assumes that we know which
+                coordinate system we are using, and which order the
+                coordinates are in. We will typically write the coordinate
+                values explicitly to avoid confusion. This also applies to
+                <a href="rvv.html#rvv-ic">vector components</a>.
+              </p>
+        </CalloutCard>
+
+        <CalloutCard>
+            <p>
+                While the idea of \(x,y\) coordinates specifying positions
+                might seem obvious, the use of algebraic quantities to
+                define geometry in this way was a major discovery of <a
+                href="http://en.wikipedia.org/wiki/Ren%C3%A9_Descartes">René
+                Descartes</a> and a key event in the <a
+                href="http://en.wikipedia.org/wiki/Scientific_Revolution">scientific
+                revolution</a>. Descartes was also instrumental in
+                establishing the philosophical groundwork of <a
+                href="http://en.wikipedia.org/wiki/Age_of_Enlightenment">The
+                Enlightenment</a>, and we owe to him the famous phrase <a
+                href="http://en.wikipedia.org/wiki/Cogito_ergo_sum">“<em>Cogito
+                ergo sum</em>”</a>.
+              </p>
+        </CalloutCard>
+    </CalloutContainer>
+</SubSection>
 
 </Section>
 
 <SubSection title="Vector Bases">
 
-<BlueText>Insert the same content here as from the TAM212 Reference Pages (Vectors and Bases - Vector Bases)</BlueText>
+<SubSection title="Vectors bases">
+
+    <p>
+      To describe vectors mathematically, we write them as a
+      combination of <em>basis vectors</em>. An <em>orthonormal
+      basis</em> is a set of two (in 2D) or three (in 3D) basis
+      vectors which are <em>orthogonal</em> (have 90°
+      angles between them) and <em>normal</em> (have length equal
+      to one). We will not be using non-orthogonal or non-normal
+      bases.
+    </p>
+    <p>
+      Any other vector can be written as a <em>linear
+      combination</em> of the basis vectors:
+    </p>
+
+    <DisplayEquation id="rvv-ec" title="Components of a vector." background=True equation="\\vec{a} = a_1 \\,\\hat{\\imath}+ a_2 \\,\\hat{\\jmath} + a_3 \\,\\hat{k}"/>
+
+    <p>
+      The numbers \(a_1, a_2, a_3\) are called the
+      <em>components</em> of <InlineEquation equation="\\vec{a}" /> in the <InlineEquation equation="\\,\\hat{\\imath}, \\hat{\\jmath}, \\hat{k}" /> basis. If we are in 2D then we will
+      only have two components for a vector.
+    </p>
+
+    <Center>
+      <PrairieDrawCanvas id="rvv-fb-c" width="400" height="300">
+        
+        <p>Writing a vector as the sum of scaled basis vectors. The
+        scale factors are the components of the vector. Here
+        <InlineEquation equation="\\vec{a} = 3\\hat\\imath + 2\\hat\\jmath" />, so the components
+        of <InlineEquation equation="\\vec{a}" /> are \(a_1 = 3\) and \(a_2 = 2\).</p>
+      </PrairieDrawCanvas>
+    </Center>
+
+    <p>
+      We draw the symbol \(\odot\) (arrow tip) to indicate a vector
+      coming out of the page, and \(\otimes\) (arrow <a
+      href="http://en.wikipedia.org/wiki/Fletching">fletching</a>)
+      to indicate an arrow going into the page.
+    </p>
+
+    <Center>
+      <PrairieDrawCanvas id="rvv-f3-c" width="400" height="300">
+      <p>
+        Two standard arrangements of the basis vectors when
+            working in 2D. Either \(\hat\jmath\) is the vertical and
+            <InlineEquation equation="\\hat{k}" /> is out of the page, or <InlineEquation equation="\\hat{k}" />  is the vertical
+            and \(\hat\jmath\) is into the page. In both cases
+            \(\hat\imath\) is horizontal.
+      </p>
+      </PrairieDrawCanvas>
+    </Center>
+
+    <CalloutContainer slot=cards>
+      <CalloutCard title="Notation note">
+        <p>
+          Just <a href="rvp.html#rvp-ic">as for position
+          coordinates</a>, we can write the vector components
+          \(3\hat\imath + 2\hat\jmath\) as the ordered list \((3, 2)\)
+          if we know which basis we are using. Because we often will
+          be using several bases simultaneously, we will generally
+          write the components explicitly in the \(3\hat\imath +
+          2\hat\jmath\) form.
+        </p>
+      </CalloutCard>
+
+      <CalloutCard>
+        <p>
+          The use of the letter \(i,j,k\) for basis vectors is due to
+          <a
+          href="http://en.wikipedia.org/wiki/William_Rowan_Hamilton">William
+          Hamilton</a>, who was motivated by thinking of basis
+          vectors as extensions of the complex number \(i\). This
+          notation was popularized by the book <a
+          href="http://en.wikipedia.org/wiki/Vector_Analysis_(Gibbs/Wilson)"><i>Vector
+          Analysis: A Text Book for the Use of Students of
+          Mathematics and Physics Founded upon the Lectures of
+          J. Willard Gibbs</i></a> (1901), by <a
+          href="http://en.wikipedia.org/wiki/Edwin_Bidwell_Wilson">E. B. Wilson</a>. This
+          book also introduced the use of bold letters to represent
+          vectors.
+        </p>
+      </CalloutCard>
+    </CalloutContainer>
+</SubSection>
+
+<SubSubSection title="Length of vectors">
+  <p>
+    The length of a vector <InlineEquation equation="\\vec{a}" /> is written
+    either <InlineEquation equation="\\| \\vec{a} \\|" /> or just plain \(a\). The
+    length can be computed using <em>Pythagorus’
+    theorem</em>:
+  </p>
+
+  <DisplayEquation id="rvv-ey" title="Pythagorus' length formula." background=True derivation=True equation="a = \\|\\vec{a}\\|            = \\sqrt{a_1^2 + a_2^2 + a_3^2}">
+    <p>
+      First we prove Pythagorus' theorem for right-angle
+      triangles. For side lengths \(a\) and \(b\) and hypotenuse
+      \(c\), the fact that \(a^2 + b^2 = c^2\) can be seen
+      graphically below, where the gray area is the same before
+      and after the triangles are rotated in the animation:
+    </p>
+
+    <Center>
+      <PrairieDrawCanvas id="rvv-fy-c" width="300" height="300" show_border=False>
+      <p>
+        <button class="anim-toggle:rvv-fy-c" onclick="rvv_fy_c.toggleAnim();">animate</button>
+        <button class="reset:rvv-fy-c" onclick="rvv_fy_c.reset();">reset</button>
+      </p>
+      </PrairieDrawCanvas>
+    </Center>
+
+    <p>
+      Pythagorus' theorem immediately gives us vector lengths
+      in 2D.  To find the length of a vector in 3D we can use
+      Pythagorus' theorem twice, as shown below. This gives
+      the two right-triangle calculations:
+
+      <DisplayEquation equation="\\begin{aligned}      \\ell^2 &amp;= a_1^2 + a_2^2 \\\\      a^2 &amp;= \\ell^2 + a_3^2 = a_1^2 + a_2^2 + a_3^2.      \\end{aligned}" />
+    </p>
+
+    <Center>
+      <PrairieDrawCanvas id="rvv-fr-c" width="300" height="300">
+        Click and drag to rotate.
+      </PrairieDrawCanvas>
+    </Center>
+  </DisplayEquation>
+
+  <Warning id="rvv-wl" title="Length must be computed in a single basis.">
+      The Pythagorean length formula can only be used if all
+      the components are written in a single orthonormal
+      basis.
+  </Warning>
+
+  <Center>
+    <PrairieDrawCanvas id="rvv-fl-c" width="400" height="400">
+      <p>
+        Computing the length of a vector using Pythagorus'
+        theorem.
+      </p>
+    </PrairieDrawCanvas>
+  </Center>
+
+  <p>
+    Some common integer vector lengths are <InlineEquation equation="\\vec{a} = 4\\hat\\imath + 3\\hat\\jmath" /> (length \(a = 5\)) and <InlineEquation equation="\\vec{b} = 12\\hat\\imath + 5\\hat\\jmath"/> (length \(b = 13\)).
+  </p>
+
+  <Warning id="rvv-wa" title="Adding vectors does not add lengths.">
+    <p>
+      If <InlineEquation equation="\\vec{c} = \\vec{a} + \\vec{b}" />, then <InlineEquation equation="\\|\\vec{c}\\| \\ne \\|\\vec{a}\\| + \\|\\vec{b}\\|" /> unless <InlineEquation equation="\\vec{a}" /> and
+      <InlineEquation equation="\\vec{b}" /> are parallel and in the same direction.
+    </p>
+    <p>
+      It will always be true, however, that <InlineEquation equation="\\|\\vec{c}\\| \\le \\|\\vec{a}\\| + \\|\\vec{b}\\|" />. This fact is known as the
+      <em>triangle inequality</em>, for reasons that should be
+      obvious.
+    </p>
+</Warning>
+
+<CalloutContainer slot="cards">
+  <CalloutCard>
+    <p>
+      Sets of three integers \(a,b,c\) where \(a^2 + b^2 = c^2\) are
+      called <a
+      href="http://en.wikipedia.org/wiki/Pythagorean_triples"><em>Pythagorean
+      triples</em></a>. A long list of such triples is given on
+      the <a
+      href="http://en.wikipedia.org/wiki/Plimpton_322">Plimpton
+      322</a> clay tablet written by the ancient Babylonians
+      around 1800 BCE, although it is unclear how they generated
+      these numbers. Pythagorean triples lead to complex
+      mathematics, including the curious patterns shown below
+      and <a
+      href="http://en.wikipedia.org/wiki/Fermat's_Last_Theorem">Fermat's
+      Last Theorem</a>.
+    </p>
+
+    <Center>
+      <PrairieDrawCanvas id="rvv-ft-c" width="250" height="250">
+        <p class="mt-3 mb-2">
+          The values of \(a\) and \(b\) for all Pythagorean triples
+        \(a,b,c\) with \(a\) and \(b\) up to 2000.
+        </p>
+      </PrairieDrawCanvas>
+    </Center>
+  </CalloutCard>
+</CalloutContainer>
+</SubSubSection>
 
 </SubSection>
 
