--- a/src/pages/sol/material_properties.astro
+++ b/src/pages/sol/material_properties.astro
@@ -21,9 +21,9 @@ import Center from "../../components/Center.astro"
 
 A <strong>stress-strain diagram</strong> is the relationship of normal stress as a function of normal strain. One way to collect these measurement is a <strong>uniaxial tension test</strong> in which a specimen at a very slow, constant rate (quasi-static). A load <InlineEquation equation="P" /> and distance <InlineEquation equation="L" /> are measured at frequent intervals.
 
-<DisplayEquation equation="\\varepsilon = \\frac{\\delta}{L_0} = \\frac{L-L_0}{L_0}\\" title="Evaluation of average normal strain, or engineering strain (relative to undeformed length):" background="True" />
+<DisplayEquation equation="\\varepsilon = \\frac{\\delta}{L_0} = \\frac{L-L_0}{L_0}\\" title="Evaluation of average normal strain, or engineering strain (relative to undeformed length)." background="True" />
 
-<DisplayEquation equation="\\sigma = \\frac{P}{A_0}\\" title="Evaluation of average normal stress, or engineering stress (relative to undeformed cross section):" background="True" />
+<DisplayEquation equation="\\sigma = \\frac{P}{A_0}\\" title="Evaluation of average normal stress, or engineering stress (relative to undeformed cross section)." background="True" />
 
 Note that two stress-strain diagrams for a particular material will be similar, but not identical, e.g. because of imperfections, different composition, rate or loading, or temperature.
 
@@ -38,7 +38,7 @@ Loading in this region results <strong>elastic behavior</strong>, meaning the ma
 
 
  Hooke's law is used for small deformations in the elastic region. The Young's modulus is the slope <InlineEquation equation="E" />.
-<DisplayEquation equation="\\sigma = E\\varepsilon\\" title="Hooke's law:" background="True" />
+<DisplayEquation equation="\\sigma = E\\varepsilon\\" title="Hooke's law." background="True" />
 
 <Image src='/Solid_Mechanics/Material Properties-Figures/Modulus Examples.png' width='2'> Table screenshot from ref pages. Approximate elastic modulus values for different material families.</Image>
 
@@ -48,9 +48,9 @@ Loading in this region results <strong>elastic behavior</strong>, meaning the ma
 <Image src='/Solid_Mechanics/Material Properties-Figures/Shear Diagram.png' width='4'>Shear stress strain diagram</Image>
 
 
-<DisplayEquation equation="\\tau_{xy} = G\\gamma_{xy}\\" title="Hooke's law:" background="True" />
+<DisplayEquation equation="\\tau_{xy} = G\\gamma_{xy}\\" title="Hooke's law." background="True" />
 
-<DisplayEquation equation="G = \\frac{E}{2(1+\\nu)}\\" title="Shear modulus:" background="True"/>
+<DisplayEquation equation="G = \\frac{E}{2(1+\\nu)}\\" title="Shear modulus." background="True"/>
  Only two of the three material constants (ie; <InlineEquation equation="G" />, <InlineEquation equation="E" />, <InlineEquation equation="\\nu" />) are independent in isotropic materials.
 
 </SubSubSection>
@@ -141,7 +141,7 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
 
 		<DisplayEquation equation="\\Delta U = \\int F_{z}dz = \\int \\sigma_{z}(\\Delta x \\Delta y \\Delta z)d\\varepsilon_{z}\\" />
 
-		 Energy Density: <DisplayEquation equation="u = \\frac{\\Delta U}{\\Delta V} = \\int \\sigma_{z}d\\varepsilon_{z}\\" />
+		 Energy density. <DisplayEquation equation="u = \\frac{\\Delta U}{\\Delta V} = \\int \\sigma_{z}d\\varepsilon_{z}\\" />
 
  		Can be generalized to any deformation: areas under stress-strain curves
 
@@ -174,13 +174,13 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
 
 <Image src="/Solid_Mechanics/Material Properties-Figures/Poisson's Ratio.png" width='4'>Poisson's ratio</Image>
 
-<DisplayEquation equation="\\varepsilon_{x} = \\frac{\\delta}{L}\\" title="Axial (normal) strain:" background="True" />
+<DisplayEquation equation="\\varepsilon_{x} = \\frac{\\delta}{L}\\" title="Axial (normal) strain." background="True" />
 
- <DisplayEquation equation="\\nu = -\\frac{\\text{lateral strain}}{\\text{axial strain}}" title=" Poisson's ratio <InlineEquation equation="\\nu" />:" background="True" />
+ <DisplayEquation equation="\\nu = -\\frac{\\text{lateral strain}}{\\text{axial strain}}" title=" Poisson's ratio <InlineEquation equation="\\nu" />." background="True" />
 
-<DisplayEquation equation="0 < \\nu < 0.5\\" title="Typical Range:" background="True" /> 
+<DisplayEquation equation="0 < \\nu < 0.5\\" title="Typical range" background="True" /> 
 
-<DisplayEquation equation="\\varepsilon_{z} = \\varepsilon_{y} = -\\nu\\varepsilon_{x}\\" title="Lateral strain:" background="True" />
+<DisplayEquation equation="\\varepsilon_{z} = \\varepsilon_{y} = -\\nu\\varepsilon_{x}\\" title="Lateral strain." background="True" />
 
  <strong>Negative Poisson's Ratio (auxetics)</strong>
 
